--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,5 +25,20 @@ set -g default-terminal "screen-256color"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# statusbar
+#set-option -g status-utf8 on
+set-option -g status-justify right
+set-option -g status-bg black # colour213 # pink
+set-option -g status-fg cyan
+set-option -g status-interval 5
+set-option -g status-left-length 30
+set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
+set-option -g status-right '#[fg=red,bold][[ #(git branch) branch ]] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d '' -f 2)#[default]'
+set-option -g visual-activity on
+
+# Titles (window number, program name, active (or not)
+set-option -g set-titles on
+set-option -g set-titles-string '#I:#S.#I.#P #W #T'
+
 
 
