--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@
 
 # >>> settings <<<
 
-font pango:Fixedsys Excelsior 3.01 11
+font pango:Fixedsys Excelsior 3.01 8
 floating_modifier $mod
 show_marks no
 focus_follows_mouse yes
@@ -12,7 +12,7 @@ focus_follows_mouse yes
 set $mod Mod4
 set $term st
 set $browser chromium
-set $fm nautilus
+set $fm thunar
 
 # >>> terminal <<<
 
@@ -117,7 +117,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 bar {
 	status_command i3status #-c ~/.config/i3/i3status.conf 
 	position top
-	font pango:mono 8
+	font pango:mono 6
 }
 
 # >>> autostart <<<
