--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -9,11 +9,11 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #101010
+background = #285577
 background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
-foreground-alt = #555
+foreground-alt = #D3D3D3
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
@@ -42,13 +42,13 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = sans:pixelsize=10;1
+font-0 = Fixedsys Excelsior 3.01:pixelsize=11;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = i3
-modules-center =
-modules-right = battery temperature date 
+modules-center = xwindow
+modules-right = filesystem volume xkeyboard memory cpu battery temperature date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -72,7 +72,36 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+; Available tags:
+;   <label> (default)
+;format-background = #f00
+;format-foreground = #000
+format-padding = 4
+
+; Available tokens:
+;   %title%
+; Default: %title%
+label = %title%
+label-maxlen = 50
+
+[module/titlescript]
+type = custom/script
+tail = true
+label = %output%
+interval = 1
+;exec = i3get -r t
+exec = displaytitle
+
+[module/titlehook]
+type = custom/ipc
+hook-0 = displaytitle
+hook-1 = displaytitle
+hook-2 = echo hook3
+initial = 1
+;click-left = polybar-msg hook titlehook 2
+;click-right = polybar-msg hook titlehook 3
+
+;polybar-msg hook MODULENAME HOOKNUMBER
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -191,29 +220,29 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = "CPU "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #268bd2
+format-underline = #f90000
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = "USE "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #073642
+format-underline = #4bffdc
 label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlo1
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
 label-connected = %essid%
 
-format-disconnected = DISCONNECTED
+format-disconnected =
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
@@ -249,13 +278,12 @@ interval = 5
 date =
 date-alt = " %Y-%m-%d"
 
-;time = %I:%M
-time = %a %h %d %I:%M %p
-time-alt = %I:%M:%S
+time = %I:%M
+time-alt = %H:%M:%S
 
-format-prefix = 
+;format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #586e75
+format-underline = #0a6cf5
 
 label = %date% %time%
 
@@ -320,7 +348,7 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = #002b36
+format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
@@ -355,7 +383,7 @@ menu-0-1-exec = menu-open-2
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = reboot
+menu-1-1-exec = sudo reboot
 
 menu-2-0 = power off
 menu-2-0-exec = sudo poweroff
@@ -374,3 +402,4 @@ margin-top = 5
 margin-bottom = 5
 
 ; vim:ft=dosini
+
