--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -368,16 +368,16 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = 
-label-open-foreground = ${colors.secondary}
-label-close =  cancel
-label-close-foreground = ${colors.secondary}
+label-open = POWER
+label-open-foreground = ${colors.foreground-alt}
+label-close = cancel
+label-close-foreground = ${colors.foreground-alt}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = logoff
 menu-0-1-exec = menu-open-2
 
 menu-1-0 = cancel
@@ -385,8 +385,8 @@ menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
+menu-2-0 = logoff
+menu-2-0-exec = sudo pkill -u reed
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
