--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,3 +1,5 @@
+
+ 
 ;=====================================================
 ;
 ;   To learn more about how to configure Polybar
@@ -6,341 +8,216 @@
 ;   The README contains alot of information
 ;
 ;=====================================================
-
+ 
 [colors]
-;background = ${xrdb:color0:#222}
-background = #285577
-background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #D3D3D3
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
-
+dark0_hard      = #1d2021
+dark0           = #282828
+dark0_soft      = #32302f
+dark1           = #3c3836
+dark2           = #504945
+dark3           = #665c54
+dark4           = #7c6f64
+gray_245        = #928374
+gray_244        = #928374
+light0_hard     = #f9f5d7
+light0          = #fbf1c7
+light0_soft     = #f2e5bc
+light1          = #ebdbb2
+light2          = #d5c4a1
+light3          = #bdae93
+light4          = #a89984
+bright_red      = #fb4934
+bright_green    = #b8bb26
+bright_yellow   = #fabd2f
+bright_blue     = #83a598
+bright_purple   = #d3869b
+bright_aqua     = #8ec07c
+bright_orange   = #fe8019
+neutral_red     = #cc241d
+neutral_green   = #98971a
+neutral_yellow  = #d79921
+neutral_blue    = #458588
+neutral_purple  = #b16286
+neutral_aqua    = #689d6a
+neutral_orange  = #d65d0e
+faded_red       = #9d0006
+faded_green     = #79740e
+faded_yellow    = #b57614
+faded_blue      = #076678
+faded_purple    = #8f3f71
+faded_aqua      = #427b58
+faded_orange    = #af3a03
+ 
+[global/wm]
+margin-top = 5
+margin-bottom = 3
+ 
 [bar/example]
-;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 20
-;offset-x = 1%
-;offset-y = 1%
-radius = 0.0
-fixed-center = false
+height = 22
+offset-x = 0
+offset-y = 0
+;background = ${colors.dark0}
+background = #cc000000 
+foreground = ${colors.light0}
 
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #f00
-
-border-size = 0
-border-color = #00000000
-
-padding-left = 0
-padding-right = 2
-
-module-margin-left = 1
-module-margin-right = 2
-
-font-0 = Fixedsys Excelsior 3.01:pixelsize=11;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-
-modules-left = i3
-modules-center = xwindow
-modules-right = filesystem volume xkeyboard memory cpu battery temperature date powermenu
-
+bottom = false
+ 
+spacing = 1
+padding-left = 1
+padding-right = 0
+module-margin-left = 0
+module-margin-right = 0
+ 
+font-0 = Source Code Pro:size=9;0
+font-1 = Font Awesome:size=9;0
+ 
+modules-left = menu0 memory temperature
+modules-center = i3
+modules-right = kernel wlan battery date
+ 
 tray-position = right
-tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-enable-ipc = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-[module/xwindow]
-type = internal/xwindow
-; Available tags:
-;   <label> (default)
-;format-background = #f00
-;format-foreground = #000
-format-padding = 4
-
-; Available tokens:
-;   %title%
-; Default: %title%
-label = %title%
-label-maxlen = 50
-
-[module/titlescript]
-type = custom/script
-tail = true
-label = %output%
-interval = 1
-;exec = i3get -r t
-exec = displaytitle
-
-[module/titlehook]
-type = custom/ipc
-hook-0 = displaytitle
-hook-1 = displaytitle
-hook-2 = echo hook3
-initial = 1
-;click-left = polybar-msg hook titlehook 2
-;click-right = polybar-msg hook titlehook 3
-
-;polybar-msg hook MODULENAME HOOKNUMBER
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
-
-label-layout = %layout%
-label-layout-underline = ${colors.secondary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
-
-[module/bspwm]
-type = internal/bspwm
-
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
-
-label-occupied = %index%
-label-occupied-padding = 2
-
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
-
+tray-padding = 0
+ 
+[module/rofi]
+type = custom/text
+content = 
+content-padding = 2
+click-left = rofi -show drun
+ 
+[module/menu0]
+type = custom/menu
+ 
+label-separator = |
+label-separator-margin = .5
+label-open = 
+ 
+format = <label-toggle> <menu>
+format-padding = 1
+menu-0-0 = 
+menu-0-0-exec = systemctl poweroff
+menu-0-1 = 
+menu-0-1-exec = systemctl reboot
+menu-0-2 = 
+menu-0-2-exec = pkill -u reed
+ 
+label-close = 
+ 
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
-wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
-;pin-workspaces = true
-
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-
-; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
-label-focused-padding = ${module/bspwm.label-focused-padding}
-
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
-
-; visible = Active workspace on unfocused monitor
-label-visible = %index%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
-
-; urgent = Workspace with urgency hint set
-label-urgent = %index%
-label-urgent-background = ${module/bspwm.label-urgent-background}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
+ 
+label-mode-background = ${colors.dark0}
+label-mode-foreground = #285577
+label-mode-padding = 0
+label-focused-font = 3
+label-unfocused-font = 3
+label-urgent-font = 3
+label-visible-font = 3
+ 
+ws-icon-0 = 1;1
+ws-icon-1 = 2;2
+ws-icon-2 = 3;3
+ws-icon-3 = 4;4
+ws-icon-4 = 5;5
+ws-icon-5 = 6;6
+ 
+label-focused = %icon%
+label-focused-background = ${colors.neutral_blue}
+label-focused-foreground = #000000
+label-focused-padding = 2
+ 
+label-unfocused = %icon%
+label-unfocused-padding = 2
+ 
+label-urgent = %icon%
+label-urgent-foreground = ${colors.neutral_orange}
+label-urgent-padding = 2
+ 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
-label = %percentage:2%%
+format = <label>%
+label =  %percentage%%
+ramp-coreload-0 = ▁
+ramp-coreload-1 = ▂
+ramp-coreload-2 = ▃
+ramp-coreload-3 = ▄
+ramp-coreload-4 = ▅
+ramp-coreload-5 = ▆
+ramp-coreload-5-foreground = ${colors.netrual_yellow}
+ramp-coreload-6 = ▇
+ramp-coreload-6-foreground = ${colors.neutral_orange}
+ramp-coreload-7 = █
+ramp-coreload-7-foreground - ${colors.neutral_red}
 
 [module/memory]
 type = internal/memory
-interval = 2
-format-prefix = "USE "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-label = %percentage_used%%
-
+format = <label> <bar-used>
+label = MEM
+update = 1
+ 
+bar-used-width = 13
+bar-used-foreground-0 = #458588
+bar-used-foreground-1 = #458588
+bar-used-foreground-2 = #fba922
+bar-used-foreground-3 = #ff5555
+bar-used-indicator = |
+bar-used-indicator-font = 6
+bar-used-indicator-foreground = #ff
+bar-used-fill = ─
+bar-used-fill-font = 6
+bar-used-empty = ─
+bar-used-empty-font = 6
+bar-used-empty-foreground = #444444
+ 
+ 
+[module/keyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+format = <label-indicator>
+format-spacing = 1
+label-indicator = %name%
+label-indicator-background = ${colors.neutral_orange}
+label-indicator-padding = 1
+ 
+[module/mpd]
+type = internal/mpd
+ 
+;host = 0.0.0.0
+port = 8000
+format-online = <icon-prev> <icon-stop> <toggle> <label-song> <icon-next> <icon-repeat> <icon-random>
+label-song = %artist% - %title%
+label-offline = ---
+ 
+icon-play      = 
+icon-pause     = 
+icon-stop      = 
+icon-prev      = 
+icon-next      = 
+icon-seekb     = 
+icon-seekf     = 
+icon-random    = 
+icon-repeat    = 
+icon-repeatone = 
+ 
+ 
 [module/wlan]
 type = internal/network
-interface = wlo1
+interface = wlp3s0
 interval = 3.0
-
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
-label-connected = %essid%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
-
-[module/eth]
-type = internal/network
-interface = wwp0s26u1u5i6
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
+ 
+format-connected = <ramp-signal><label-connected>
+format-disconnected = <label-disconnected>
+label-connected-foreground = ${colors.light4}
 label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-[module/date]
-type = internal/date
-interval = 5
-
-date =
-date-alt = " %Y-%m-%d"
-
-time = %I:%M
-time-alt = %H:%M:%S
-
-;format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
-
-label = %date% %time%
-
-[module/volume]
-type = internal/volume
-
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL
-label-volume-foreground = ${root.foreground}
-
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = AC
-full-at = 98
-
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
+label-disconnected = %ifname%
+label-disconnected-foreground = ${colors.neutral_red}
+ramp-signal-0 = 
+ 
+separator = true
 
 [module/temperature]
 type = internal/temperature
@@ -348,58 +225,165 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
 
 label = %temperature%
 label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
+label-warn-foreground = #e60053
 
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
-
-[module/powermenu]
-type = custom/menu
-
-expand-right = true
-
-format-spacing = 1
-
-label-open = POWER
-label-open-foreground = ${colors.foreground-alt}
-label-close = cancel
-label-close-foreground = ${colors.foreground-alt}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = logoff
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = logoff
-menu-2-0-exec = sudo pkill -u reed
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
-
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-
-[global/wm]
-margin-top = 5
-margin-bottom = 5
-
-; vim:ft=dosini
-
+ramp-foreground = #D3D3D3
+ 
+[module/date]
+type = internal/date
+date =  %A, %b. %d  %I:%M %p
+time = %H:%M
+interval = 5
+format-font =3
+format-background = ${colors.dark2}
+format-foreground = ${colors.light2}
+format-padding = 1
+ 
+[module/kernel]
+type = custom/script
+exec = uname -r
+internal = 100
+format =  <label>
+format-padding = 1
+ 
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ACAD
+full-at = 100
+ 
+; TODO: WHY DOESNT IT WORK
+click-left = notify-send -t 100 "test"
+; click-left = $(notify-send -t 200 -u low "$(acpi)")
+; click-left = notify-send -t 200 -u low "$(acpi)"
+ 
+format-charging = <animation-charging>  <label-charging>
+format-discharging = <ramp-capacity><label-discharging>
+format-full = <label-full> 
+ 
+ 
+label-charging =%percentage%
+label-discharging=%percentage%
+label-full = %percentage %%
+ 
+format-charging-padding = 1
+format-discharging-padding = 1
+format-full-padding = 1
+ 
+ramp-capacity-0 = 
+ramp-capacity-0-foreground = ${colors.neutral_red}
+ramp-capacity-1 = 
+ramp-capacity-1-foreground = ${colors.neutral_orange}
+ramp-capacity-2 = 
+ramp-capacity-2-foreground = ${colors.neutral_yellow}
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 800
+ 
+[module/volume]
+type = internal/volume
+ 
+; Name of the master mixer
+; Default: Master
+;master-mixer = Master
+ 
+; Optionally define speaker and headphone mixers
+; Use the following command to list available mixer controls:
+; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
+; Default: none
+; speaker-mixer = Speaker
+; Default: none
+; headphone-mixer = Headphone
+ 
+; NOTE: This is required if headphone_mixer is defined
+; Use the following command to list available device controls
+; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
+; Default: none
+; headphone-id = 9
+ 
+; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
+; Default: false
+mapping = false
+ 
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <ramp-volume> <label-volume>
+format-volume-padding = 1
+format-muted-padding = 1
+ 
+; Available tokens:
+;   %percentage% (default)
+label-volume = %percentage%
+label-muted = 
+label-muted-foreground = ${colors.neutral_red}
+ 
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ 
+; If defined, it will replace <ramp-volume> when
+; headphones are plugged in to `headphone_control_numid`
+; If undefined, <ramp-volume> will be used for both
+; Only applies if <ramp-volume> is used
+ramp-headphones-0 =
+ramp-headphones-1 =
+ramp-headphones-2 =
+ 
+; increase sound volume
+scroll-up   = pactl set-sink-volume 1 +5%
+; decrease sound volume
+scroll-down = pactl set-sink-volume 1 -5%
+ 
+ 
+[module/backlight]
+;inherit = internal/backlight
+type = internal/backlight
+; card = intel_backlight
+ 
+format = <ramp>
+format-padding = 1
+format-background = ${colors.dark1}
+format-foreground = ${colors.dark3}
+ 
+enable-scroll = true
+; Available tokens:
+;   %percentage% (default)
+label = %percentage%
+ 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ 
+[bar/bottom-bar]
+width = 100%
+height = 32
+offset-x = 0
+offset-y = 0
+bottom = true
+background = ${colors.dark0}
+foreground = ${colors.light0}
+ 
+spacing = 1
+padding-left = 1
+padding-right = 0
+module-margin-left = 0
+module-margin-right = 0
+ 
+font-0 = DejaVu Sans Mono:size=10;0
+font-1 = Font Awesome:size=10;0
