--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf \; display-message "Configuration Reloaded"
+# edit tmux.conf or tmux-status
+bind E new-window -n 'tmux.conf' 'nvim ~/git/dotfiles/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
+bind S new-window -n 'tmux-status.conf' 'nvim ~/.tmux.theme && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
  
 set -g mouse on
 
@@ -27,8 +30,11 @@ set -g default-terminal "screen-256color"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# No escape time
+set -sg escape-time 0
+
 # statusline theme
-source "$HOME/.tmux.theme"
+source "$HOME/.theme.tmux"
 
 
 
