--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
+# statusline theme
+source "$HOME/.theme.tmux"
+
+# turn mouse on
+set -g mouse on
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -9,32 +15,58 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# start window/pane index on 1 instead of 0
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
+# 256 colors
+set -g default-terminal "screen-256color"
+
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf \; display-message "Configuration Reloaded"
 # edit tmux.conf or tmux-status
 bind E new-window -n 'tmux.conf' 'nvim ~/git/dotfiles/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
 bind S new-window -n 'tmux-status.conf' 'nvim ~/.tmux.theme && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
- 
-set -g mouse on
 
-set -g default-terminal "screen-256color"
- 
 # history size
 set-option -g history-limit 10000
- 
-# enable 256-color terminal
-#set-option -g default-terminal "screen-256color"
-set -g default-terminal "screen-256color"
-
-# start window/pane index on 1 instead of 0
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
 
 # No escape time
 set -sg escape-time 0
 
-# statusline theme
-source "$HOME/.theme.tmux"
+# vim keys in command prompt
+set-option -g status-keys vi
 
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# cycle windows/panes (no prefix)
+bind-key -n M-k select-pane -t :.-  # prev pane
+bind-key -n M-j select-pane -t :.+  # next pane
+bind-key -n M-h select-window -t :- # previous window
+bind-key -n M-l select-window -t :+ # next window
+
+# cmatrix screensaver
+set -g lock-after-time 200
+set -g lock-command cmatrix
+
+# Custom Layouts
+
+# -v = split horizontal
+# -h = split vertically
+
+# nvim setup
+bind-key M-e new-window -n nvim-setup -c $HOME \; \
+	send-keys 'dots' 'Enter' \; \
+	select-pane -t 1
 
 
