--- a/.config/i3/config
+++ b/.config/i3/config
@@ -38,7 +38,7 @@ $win+Shift+r restart
 $win+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # Rofi
-$win+d exec rofi -show drun -theme bmenu
+$win+d exec ~/scripts/rofi
 $win+e exec ~/scripts/rofi-powermenu
 #$win+d exec dmenu_run
 
@@ -53,6 +53,7 @@ $win+f exec $fm
 $win+b exec $browser
 #$win+f exec firefox
 $win+n exec nitrogen
+$win+u exec orage
 
 # gaps
 bindsym $mod+Shift+t gaps inner current set 15; gaps outer current set 15
@@ -132,7 +133,7 @@ for_window [instance="dropdown"] floating enable
 for_window [instance="dropdown"] resize set 650 450
 for_window [instance="dropdown"] move scratchpad
 for_window [instance="dropdown"] border pixel 5
-exec --no-startup-id $term -n dropdown
+exec --no-startup-id st -n dropdown
 
 # Rules for Specific Programs
 for_window [class="MPlayer"] floating enable
@@ -214,8 +215,9 @@ $exe nitrogen --restore
 $exe xmodmap ~/scripts/remaps
 #$exe compton
 $exe dropbox
-#$exe nm-applet
-#$exe pa-applet
+$exe nm-applet
+$exe pa-applet
+#$exe redshift
 #$exe feh --fill ~/Pictures/wall.png
 
 # }}}
