--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# goto last used window
+bind-key C-a last-window
+
 # start window/pane index on 1 instead of 0
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
@@ -56,8 +59,13 @@ bind-key -n M-h select-window -t :- # previous window
 bind-key -n M-l select-window -t :+ # next window
 
 # cmatrix screensaver
-set -g lock-after-time 200
-set -g lock-command cmatrix
+#set -g lock-after-time 200
+#set -g lock-command cmatrix
+
+# toggle mouse mode (tmux 2.1 or higher)
+# https://www.reddit.com/r/tmux/comments/3paqoi/tmux_21_has_been_released/cw552qd
+bind-key m set-option -g -q mouse on \; display-message 'Mouse: ON'
+bind-key M set-option -g -q mouse off \; display-message 'Mouse: OFF'
 
 # Custom Layouts
 
