--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # statusline theme
 source "$HOME/.theme.tmux"
 
-# turn mouse on
+# turn mouse on by default
 set -g mouse on
 
 # remap prefix from 'C-b' to 'C-a'
@@ -55,12 +55,12 @@ bind -n M-Down select-pane -D
 # cycle windows/panes (no prefix)
 bind-key -n M-k select-pane -t :.-  # prev pane
 bind-key -n M-j select-pane -t :.+  # next pane
-bind-key -n M-h select-window -t :- # previous window
-bind-key -n M-l select-window -t :+ # next window
+bind-key -n C-s select-window -t :- # previous window
+#bind-key -n C-l select-window -t :+ # next window
 
 # cmatrix screensaver
 #set -g lock-after-time 200
-#set -g lock-command cmatrix
+#set -g lock-command cmatrix -C blue -s -o
 
 # toggle mouse mode (tmux 2.1 or higher)
 # https://www.reddit.com/r/tmux/comments/3paqoi/tmux_21_has_been_released/cw552qd
