--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,12 +17,17 @@ gaps outer 0
 
 # Variables
 set $mod Mod4
-set $term  xfce4-terminal
-set $browser chromium
+#set $mod Mod1
+set $term xfce4-terminal
+#set $term st 
+set $browser firefox
 set $fm thunar
 set $exe exec --no-startup-id exec
 set $alt bindsym Mod1
 set $win bindsym Mod4
+
+
+for_window [class="^.*"] border normal 1
 
 # }}}
 # Keybindings {{{
@@ -38,9 +43,9 @@ $win+Shift+r restart
 $win+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # Rofi
-$win+d exec ~/scripts/rofi
+#$win+d exec ~/scripts/rofi
 $win+e exec ~/scripts/rofi-powermenu
-#$win+d exec dmenu_run
+$win+d exec dmenu_run -fn 'FixedFixedsys:pixelsize=16.5'
 
 # i3 Lock
 $win+x exec i3lock-fancy -p
@@ -137,6 +142,7 @@ exec --no-startup-id st -n dropdown
 
 # Rules for Specific Programs
 for_window [class="MPlayer"] floating enable
+for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move up 10 px
 
 # browser pop-ups
 #for_window [window_role="pop-up"] floating enable
@@ -198,15 +204,25 @@ bindsym $mod+Shift+0	move container to workspace $ws10
 # Bar {{{
 
 # Defualt i3status or i3blocks
-bar {
-       status_command ~/.config/bumblebee-status/bumblebee-status -m sensors nic battery kernel datetime -p nic.exclude="enp0s25,lo" datetime.format="%a, %b %d, %y at %I:%M %p" -t solarized-powerline
-       # status_command i3status
-	position bottom
-	font pango:Droid Sans Mono for Powerline 7
-}
+#bar {
+#       #status_command ~/.config/bumblebee-status/bumblebee-status -m sensors nic battery kernel datetime -p nic.exclude="enp0s25,lo" datetime.format="%a, %b %d, %y at %I:%M %p" -t solarized-powerline
+#        status_command i3status
+#	#status_command i3blocks -c ~/.config/i3blocks/i3blocks.conf
+#	position bottom
+#	font pango:Droid Sans Mono for Powerline 6
+#	strip_workspace_numbers yes
+
+
+#	colors {
+#        background #09090990
+#	focused_workspace #09090990 #09090990 #b37eba
+#        inactive_workspace #09090990 #09090990 #807282
+#	#inactive_workspace #09090990 #09090990 #bba8bd
+#	}
+#}
 
 # polybar
-#exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # }}}
 # Autostart {{{
